Fix scrollbar layout shift.
- https://dev.to/rashidshamloo/preventing-the-layout-shift-caused-by-scrollbars-2flp

--- a/src/app.scss
+++ b/src/app.scss
@@ -4,4 +4,6 @@
 
 @use 'open-props-scss' as *;
 
-
+body {
+	scrollbar-gutter: stable;
+}
